# FAST-Calib2-sany

./: CLAUDE.md  CMakeLists.txt  README.md  readme.md
config/: qr_params.yaml
docs/superpowers/plans/: 2026-07-01-去ros化-implementation.md
docs/superpowers/specs/: 2026-07-01-去ros化-design.md
include/: common_lib.h  pcd_io.hpp  vehicle_config_reader.hpp
src/: data_preprocess.hpp  lidar_center_test.cpp  lidar_detect.hpp  main.cpp  multi_scene.cpp  qr_detect.hpp
